feat: add result analysis of shared-optim2 run and set the parameters

--- a/timeeval_experiments/param-config.json
+++ b/timeeval_experiments/param-config.json
@@ -67,6 +67,15 @@
       "latent_size": 6,
       "hidden_layer_shape": [100, 100],
       "dropout": 0.1
+    },
+    "HBOS": {
+      "n_bins": 20
+    },
+    "PST": {
+      "n_bins": 5
+    },
+    "MultiHMM": {
+      "n_bins": 5
     }
   },
   "__heuristic_function_mapping": {
