--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+data/
+results/
+timeeval_experiments/results
+**/*.log
+
 ########################################
 # Python.gitignore from github/gitignore
 ########################################
