fix: parameter search values of PST

--- a/timeeval_experiments/param-config.json
+++ b/timeeval_experiments/param-config.json
@@ -725,8 +725,8 @@
       false
     ],
     "sim": [
-      "simo",
-      "simn"
+      "SIMo",
+      "SIMn"
     ],
     "smoothing_window_size": [
       10,
