--- a/timeeval_experiments/param-config.json
+++ b/timeeval_experiments/param-config.json
@@ -1,5 +1,9 @@
 {
   "__algorithm_overwrites": {
+    "ARIMA": {
+      "differencing_degree": 1,
+      "distance_metric": "twed"
+    },
     "Bagel": {
       "dropout": 0.1,
       "hidden_layer_shape": [
@@ -9,9 +13,43 @@
       "latent_size": 6,
       "window_size": "2.0 dataset period size"
     },
+    "DBStream": {
+      "alpha": 0.5,
+      "lambda": 0.001,
+      "min_weight": 0,
+      "radius": 1.3,
+      "shared_density": true,
+      "window_size": "1.0 dataset period size"
+    },
+    "DWT-MLEAD": {
+      "quantile_epsilon": 0.1
+    },
+    "DeepAnT": {
+      "window_size": "0.5 dataset period size"
+    },
+    "DeepNAP": {
+      "linear_hidden_size": 100,
+      "lstm_layers": 1,
+      "partial_sequency_length": 1,
+      "rnn_hidden_size": 200
+    },
+    "Donut": {
+      "latent_size": 5,
+      "linear_hidden_size": 130,
+      "window_size": "1.0 dataset period size"
+    },
     "EncDec-AD": {
       "latent_size": "-30% default value",
       "lstm_layers": 3
+    },
+    "FFT": {
+      "fft_parameters": 3,
+      "local_outlier_threshold": 0.78,
+      "max_sign_change_distance": 20
+    },
+    "GrammarViz": {
+      "alphabet_size": 6,
+      "paa_transform_size": 5
     },
     "HBOS": {
       "n_bins": 20
@@ -34,6 +72,13 @@
       "n_estimators": 1000,
       "n_neighbors": 10
     },
+    "ImageEmbeddingCAE": {
+      "latent_size": 70
+    },
+    "LSTM-AD": {
+      "lstm_layers": 1,
+      "window_size": "2.0 * dataset period size"
+    },
     "MTAD-GAT": {
       "context_window_size": 30,
       "gamma": 0.8,
@@ -49,9 +94,81 @@
       "threshold": 6,
       "window_size": "2.0 dataset period size"
     },
+    "MedianMethod": {
+      "neighbourhood_size": "2.0 * dataset period size"
+    },
     "MultiHMM": {
+      "discretizer": "choquet",
+      "n_bins": 5
+    },
+    "Normalizing Flows": {
+      "distillation_iterations": 100,
+      "teacher_epochs": 100,
+      "window_size": "1.0 dataset period size"
+    },
+    "NumentaHTM": {
+      "activationThreshold": 12,
+      "alpha": 0.5,
+      "autoDetectWaitRecords": 50,
+      "cellsPerColumn": 32,
+      "columnCount": 2048,
+      "encoding_input_width": 21,
+      "encoding_output_width": 75,
+      "globalDecay": 0,
+      "initialPerm": 0.15,
+      "inputWidth": 2048,
+      "maxAge": 0,
+      "maxSegmentsPerCell": 128,
+      "maxSynapsesPerSegment": 32,
+      "minThreshold": 9,
+      "newSynapseCount": 15,
+      "numActiveColumnsPerInhArea": 50,
+      "pamLength": 1,
+      "permanenceDec": 0.1,
+      "permanenceInc": 0.1,
+      "potentialPct": 0.1,
+      "synPermActiveInc": 0.05,
+      "synPermConnected": 0.1,
+      "synPermInactiveDec": 0.01
+    },
+    "OceanWNN": {
+      "wavelet_a": -3.25,
+      "wavelet_cs_C": 2.275,
+      "wavelet_k": -1.95,
+      "wavelet_wbf": "mexican_hat"
+    },
+    "OmniAnomaly": {
+      "l2_reg": 0.0001,
+      "latent_size": 4,
+      "linear_hidden_size": 100,
+      "nf_layers": 5,
+      "rnn_hidden_size": 100,
+      "window_size": "1.0 dataset period size"
+    },
+    "PCI": {
+      "window_size": "0.5 * dataset period size"
+    },
+    "PST": {
       "n_bins": 5,
-      "discretizer": "choquet"
+      "sim": "SIMn",
+      "window_size": "1.0 * dataset period size"
+    },
+    "PhaseSpace-SVM": {
+      "coef0": 0,
+      "degree": 3,
+      "gamma": 1.0,
+      "kernel": "rbf",
+      "nu": 0.35,
+      "project_phasespace": true,
+      "tol": 0.001
+    },
+    "Random Black Forest (RR)": {
+      "bootstrap": false,
+      "n_estimators": 200,
+      "n_trees": 10
+    },
+    "Random Forest Regressor (RR)": {
+      "bootstrap": true
     },
     "SR-CNN": {
       "num": 10,
@@ -61,9 +178,40 @@
     "SSA": {
       "window_size": "2.0 dataset period size"
     },
+    "Series2Graph": {
+      "rate": 100,
+      "window_size": "1.0 * dataset period size"
+    },
+    "Spectral Residual (SR)": {
+      "window_size": "2.0 * dataset period size"
+    },
+    "Subsequence IF": {
+      "bootstrap": true,
+      "window_size": "1.0 * dataset period size"
+    },
+    "Subsequence LOF": {
+      "window_size": "1.0 * dataset period size"
+    },
+    "TARZAN": {
+      "alphabet_size": 4
+    },
     "TAnoGan": {
       "iterations": 25,
       "window_size": "1.5 dataset period size"
+    },
+    "TSBitmap": {
+      "alphabet_size": 4,
+      "compression_ratio": 1,
+      "feature_window_size": 500,
+      "lag_window_size": 500,
+      "lead_window_size": 200,
+      "level_size": 2
+    },
+    "Telemanom": {
+      "error_buffer": 100,
+      "p": 0.17,
+      "smoothing_window_size": 30,
+      "window_size": "1.5 * dataset period size"
     },
     "Torsk": {
       "context_window_size": 10,
@@ -94,157 +242,9 @@
       "min_anomaly_window_size": "1.0 dataset period size"
     },
     "XGBoosting (RR)": {
+      "booster": "gblinear",
       "learning_rate": 0.1,
-      "n_trees": 10,
-      "booster": "gblinear"
-    },
-    "OmniAnomaly": {
-      "window_size": "1.0 dataset period size",
-      "latent_size": 4,
-      "linear_hidden_size": 100,
-      "rnn_hidden_size": 100,
-      "nf_layers": 5,
-      "l2_reg": 0.0001
-    },
-    "FFT": {
-      "max_sign_change_distance": 20,
-      "local_outlier_threshold": 0.78,
-      "fft_parameters": 3
-    },
-    "Donut": {
-      "window_size": "1.0 dataset period size",
-      "linear_hidden_size": 130,
-      "latent_size": 5
-    },
-    "DeepAnT": {
-      "window_size": "0.5 dataset period size"
-    },
-    "DWT-MLEAD": {
-      "quantile_epsilon": 0.1
-    },
-    "DBStream": {
-      "window_size": "1.0 dataset period size",
-      "shared_density": true,
-      "radius": 1.3,
-      "min_weight": 0,
-      "lambda": 0.001,
-      "alpha": 0.5
-    },
-    "Random Forest Regressor (RR)": {
-      "bootstrap": true
-    },
-    "LSTM-AD": {
-      "window_size": "2.0 * dataset period size",
-      "lstm_layers": 1
-    },
-    "ImageEmbeddingCAE": {
-      "latent_size": 70
-    },
-    "GrammarViz": {
-      "paa_transform_size": 5,
-      "alphabet_size": 6
-    },
-    "OceanWNN": {
-      "wavelet_wbf": "mexican_hat",
-      "wavelet_cs_C": 2.275,
-      "wavelet_k": -1.95,
-      "wavelet_a": -3.25
-    },
-    "Normalizing Flows": {
-      "window_size": "1.0 dataset period size",
-      "teacher_epochs": 100,
-      "distillation_iterations": 100
-    },
-    "MedianMethod": {
-      "neighbourhood_size": "2.0 * dataset period size"
-    },
-    "PhaseSpace-SVM": {
-      "coef0": 0,
-      "tol": 0.001,
-      "project_phasespace": true,
-      "gamma": 1.0,
-      "nu": 0.35,
-      "degree": 3,
-      "kernel": "rbf"
-    },
-    "PST": {
-      "n_bins": 5,
-      "window_size": "1.0 * dataset period size",
-      "sim": "SIMn"
-    },
-    "PCI": {
-      "window_size": "0.5 * dataset period size"
-    },
-    "TARZAN": {
-      "alphabet_size": 4
-    },
-    "Subsequence LOF": {
-      "window_size": "1.0 * dataset period size"
-    },
-    "Subsequence IF": {
-      "window_size": "1.0 * dataset period size",
-      "bootstrap": true
-    },
-    "Spectral Residual (SR)": {
-      "window_size": "2.0 * dataset period size"
-    },
-    "Series2Graph": {
-      "window_size": "1.0 * dataset period size",
-      "rate": 100
-    },
-    "Telemanom": {
-      "window_size": "1.5 * dataset period size",
-      "smoothing_window_size": 30,
-      "p": 0.17,
-      "error_buffer": 100
-    },
-    "TSBitmap": {
-      "level_size": 2,
-      "lead_window_size": 200,
-      "lag_window_size": 500,
-      "feature_window_size": 500,
-      "compression_ratio": 1,
-      "alphabet_size": 4
-    },
-    "NumentaHTM": {
-      "alpha": 0.5,
-      "globalDecay": 0,
-      "encoding_output_width": 75,
-      "encoding_input_width": 21,
-      "columnCount": 2048,
-      "cellsPerColumn": 32,
-      "autoDetectWaitRecords": 50,
-      "activationThreshold": 12,
-      "inputWidth": 2048,
-      "initialPerm": 0.15,
-      "maxAge": 0,
-      "synPermConnected": 0.1,
-      "synPermInactiveDec": 0.01,
-      "synPermActiveInc": 0.05,
-      "maxSegmentsPerCell": 128,
-      "potentialPct": 0.1,
-      "permanenceInc": 0.1,
-      "permanenceDec": 0.1,
-      "pamLength": 1,
-      "numActiveColumnsPerInhArea": 50,
-      "newSynapseCount": 15,
-      "minThreshold": 9,
-      "maxSynapsesPerSegment": 32
-    },
-    "DeepNAP": {
-      "rnn_hidden_size": 200,
-      "linear_hidden_size": 100,
-      "partial_sequency_length": 1,
-      "lstm_layers": 1
-    },
-    "ARIMA": {
-      "differencing_degree": 1,
-      "distance_metric": "twed"
-    },
-    "Random Black Forest (RR)": {
-      "bootstrap": false,
-      "n_trees": 10,
-      "n_estimators": 200
+      "n_trees": 10
     }
   },
   "__heuristic_function_mapping": {
