--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - pandas=1.3.*
   - psutil
   - statsmodels=0.12.*
+  - jinja2=3.0.*
   - pip:
       - tqdm==4.54.*
       - dask[distributed]==2021.5.*
