feat: configure and setup logging for dask

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ ignore_missing_imports = True
 [mypy-tqdm.*]
 ignore_missing_imports = True
 
-[mypy-dask.distributed.*]
+[mypy-dask.*]
 ignore_missing_imports = True
 
 [mypy-distributed.client.*]
