--- a/environment.yml
+++ b/environment.yml
@@ -3,19 +3,19 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
-  - pip=20
-  - scikit-learn=0.23.*
+  - python>=3.7,<=3.9
+  - pip>=20
+  - scikit-learn>=0.23
   - matplotlib=3.3.*
   - numpy=1.20.*
   - pandas=1.3.*
-  - psutil
   - statsmodels=0.12.*
   - jinja2=3.0.*
+  - tqdm=4.54.*
+  - asyncssh=2.5.*
+  - psutil
   - pip:
-      - tqdm==4.54.*
       - dask[distributed]==2021.5.*
-      - asyncssh==2.5.*
       - docker==4.4.*
       - durations==0.3.*
       - prts==1.0.0.3
