feat: use matrix to test and build for python 3.7, 3.8, and 3.9 in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,19 +20,25 @@ workflow:
     - if: '$CI_COMMIT_BRANCH =~ /^doc\//'
       when: never
 
-before_script:
-  - export PIP_CACHE_DIR="/opt/cache/pip"
-  - echo "Setting up conda environment and installing dependencies"
-  - conda env create -n timeeval -f environment.yml
-  - source activate timeeval
-  - pip install -r requirements.ci
-
-test:
-  stage: test
-  interruptible: true
+.matrix-common:
   tags:
     - akita
     - conda
+  before_script: &common-before-script
+    - export PIP_CACHE_DIR="/opt/cache/pip"
+    - echo "Setting up conda environment and installing dependencies"
+    - conda create -y -n timeeval python=${PYTHON_VERSION:-3.7}
+    - conda env update -n timeeval -f environment.yml
+    - source activate timeeval
+    - pip install -r requirements.ci
+  parallel:
+    matrix:
+        - PYTHON_VERSION: ["3.7", "3.8", "3.9"]
+
+test:
+  extends: .matrix-common
+  stage: test
+  interruptible: true
   script:
     - python setup.py typecheck
     - python setup.py test
@@ -40,26 +46,50 @@ test:
     reports:
       cobertura: coverage.xml
 
-build:
+build-source:
   stage: build
+  needs:
+    - test
   tags:
     - akita
     - conda
+  only:
+    - tags
+  before_script:
+    - *common-before-script
+  script:
+    - python setup.py sdist
+  artifacts:
+    paths:
+      - dist/*.tar.gz
+
+build-binaries:
+  extends: .matrix-common
+  stage: build
+  needs:
+    - test
   only:
     - tags
   script:
-    - python setup.py sdist bdist_wheel
+    - python setup.py bdist_wheel
   artifacts:
     paths:
       - dist/*.whl
-      - dist/*.tar.gz
 
 deploy:
   stage: deploy
+  needs:
+    - build-source
+    - build-binaries
   tags:
     - akita
     - conda
   only:
     - tags
+  before_script:
+    - export PIP_CACHE_DIR="/opt/cache/pip"
+    - echo "Setting up conda environment with twine for deployment"
+    - conda create -y -n deploy python=3.7 twine
+    - conda activate deploy
   script:
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url https://gitlab.hpi.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
