feat: increase minor version number and publish to PyPI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,3 +81,4 @@ deploy:
     - source activate deploy
   script:
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url https://gitlab.hpi.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
+    - TWINE_PASSWORD=${PYPI_API_TOKEN} TWINE_USERNAME=__token__ python -m twine upload --repository pypi dist/*
