--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,6 @@
 name: "timeeval"
 channels:
   - defaults
-  - conda-forge
 dependencies:
   - python>=3.7,<=3.9
   - pip>=20
@@ -12,7 +11,7 @@ dependencies:
   - statsmodels=0.12.*
   - jinja2=3.0.*
   - tqdm=4.54.*
-  - asyncssh=2.5.*
+  - conda-forge::asyncssh=2.5.*
   - psutil
   - pip:
       - dask[distributed]==2021.5.*
