--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,9 @@ channels:
 dependencies:
   - python>=3.7,<=3.9
   - pip>=20
-  - scikit-learn>=0.23
-  - matplotlib=3.3.*
-  - numpy=1.20.*
+  - scikit-learn>=0.24.*
+  - matplotlib=3.4.*
+  - numpy=1.21.*
   - pandas=1.3.*
   - statsmodels=0.12.*
   - jinja2=3.0.*
@@ -15,6 +15,7 @@ dependencies:
   - psutil
   - pip:
       - dask[distributed]==2021.5.*
+      - click==8.0.2  # newer versions are not compatible with dask[distributed] ATM; remove if fixed upstream (https://github.com/dask/distributed/issues/6013)
       - docker==4.4.*
       - durations==0.3.*
       - prts==1.0.0.3
