chore: improve typing and fix typing issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,14 @@ skip_covered = True
 sort = Cover
 
 [mypy]
+warn_unused_configs = True
+warn_unused_ignores = True
+warn_no_return = True
+exclude = (^timeeval_experiments/\d\d\d\d-\d\d-\d\d[_-].+$)
+
+[mypy-timeeval.*]
+warn_return_any = True
+disallow_untyped_defs = True
 
 [mypy-sklearn.*]
 ignore_missing_imports = True
