--- a/.github/workflows/test-matrix.yml
+++ b/.github/workflows/test-matrix.yml
@@ -2,7 +2,9 @@ name: Python Test using Conda
 
 on:
   push:
-    branches: [main]
+    branches: [main, feat/move-github]
+    tags:
+      - v*
 
 # Required shell entrypoint to have properly activated conda environments
 defaults:
@@ -16,10 +18,9 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest] # [ubuntu-latest, windows-latest, macOS-latest]
         python_version: ["3.7", "3.8", "3.9"]
       fail-fast: false
-
 
     steps:
     - uses: actions/checkout@v3
@@ -67,3 +68,69 @@ jobs:
       with:
         files: coverage.xml
         flags: unittests
+
+  build-source-distribution:
+    name: Build source distribution
+#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup Miniconda
+      uses: conda-incubator/setup-miniconda@v2.1.1
+      with:
+        use-mamba: true
+        auto-update-conda: true
+        python-version: 3.7
+        environment-file: environment.yaml
+    - name: Build source distribution
+      run: |
+        python setup.py sdist
+    - name: Upload packages
+      uses: actions/upload-artifact@v3
+      with:
+        name: packages-source
+        path: dist
+
+  build-manylinux-wheels:
+    name: Build manylinux wheels
+#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build manylinux Python wheels
+        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2010_x86_64
+        with:
+          python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
+      - name: List packages
+        run: |
+          ls -alh dist
+      - name: Upload packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: packages-manylinux
+          path: dist/*.manylinux2010_x86_64.whl
+
+  publish:
+    name: Publish distributions
+#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: [build-source-distribution, build-manylinux-wheels]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download packages
+      uses: actions/download-artifact@v3
+      with:
+        path: dist
+    - name: Restore original folder structure of dist
+      run: |
+        find dist -type f -exec mv {} dist/ \;
+        find dist/* -type d -exec rmdir {} \; || true
+    - name: Publish package to PyPi
+      uses: pypa/gh-action-pypi-publish@v1.5
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
