--- a/.github/workflows/test-build-matrix.yml
+++ b/.github/workflows/test-build-matrix.yml
@@ -2,7 +2,7 @@ name: Test, Build, and Publish
 
 on:
   push:
-    branches: [main, feat/move-github]
+    branches: [main]
     tags:
       - v*
 
@@ -71,7 +71,7 @@ jobs:
 
   build-source-distribution:
     name: Build source distribution
-#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs: test
     runs-on: ubuntu-latest
 
@@ -95,7 +95,7 @@ jobs:
 
   build-manylinux-wheels:
     name: Build manylinux wheels
-#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs: test
     runs-on: ubuntu-latest
 
@@ -112,11 +112,11 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: packages-manylinux
-          path: dist/*.manylinux2010_x86_64.whl
+          path: dist/*.whl
 
   publish:
     name: Publish distributions
-#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs: [build-source-distribution, build-manylinux-wheels]
     runs-on: ubuntu-latest
 
