--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,12 +7,22 @@ SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
 BUILDDIR      = _build
+MODULEDIR     = ../timeeval
+
+.PHONY: help api html clean Makefile
 
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+clean:
+	-rm -rf "$(BUILDDIR)" "$(SOURCEDIR)/api"
+
+api:
+	@sphinx-apidoc -f -o "$(SOURCEDIR)/api" "$(MODULEDIR)"
+
+html: api
+	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
