--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,17 +5,20 @@
 version: 2
 
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
+  apt_packages:
+    - make
   tools:
     python: "3.9"
+  jobs:
+    pre_build:
+      - make api
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
-formats:
-   - pdf
-   - epub
+formats: all
 
 python:
-   install:
-   - requirements: docs/requirements.txt
+  install:
+  - requirements: docs/requirements.txt
