--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,6 +12,7 @@ build:
     python: "3.9"
   jobs:
     pre_build:
+      - echo "$(pwd)"
       - make api
 
 # Build documentation in the docs/ directory with Sphinx
