--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,8 +13,8 @@ build:
   jobs:
     pre_build:
       - ls -alh
-      - cd docs && make api
-
+      - env
+      - cd docs && python -m sphinx-apidoc -f -o api ../timeeval
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
