--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,11 +12,10 @@ build:
     python: "3.9"
   jobs:
     pre_build:
-      - cd docs
       - ls -alh
       - env
       - which python
-      - python -m "sphinx.ext.apidoc" -f -o api ../timeeval
+      - cd docs && python -m "sphinx.ext.apidoc" -f -o api ../timeeval
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
