--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,7 +15,7 @@ build:
       - ls -alh
       - env
       - which python
-      - cd docs && python -m "sphinx.ext.apidoc" -f -o api ../timeeval
+      - python -m "sphinx.ext.apidoc" -f -o docs/api timeeval
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
