fix: install timeeval and all its dependencies before building doc to allow autodoc

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,22 +7,15 @@ SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
 BUILDDIR      = _build
-MODULEDIR     = ../timeeval
 
-.PHONY: help api html clean Makefile
+.PHONY: help clean Makefile
 
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 clean:
-	-rm -rf "$(BUILDDIR)" "$(SOURCEDIR)/api/modules.rst" "$(SOURCEDIR)/api/timeeval*.rst"
-
-api:
-	@sphinx-apidoc -f -o "$(SOURCEDIR)/api" "$(MODULEDIR)"
-
-html: api
-	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	-rm -rf "$(BUILDDIR)"
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
