--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,16 +6,9 @@ version: 2
 
 build:
   os: ubuntu-22.04
-  apt_packages:
-    - make
   tools:
     python: "3.9"
-  jobs:
-    pre_build:
-      - ls -alh
-      - env
-      - which python
-      - python -m "sphinx.ext.apidoc" -f -o docs/api timeeval
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
@@ -23,4 +16,6 @@ formats: all
 
 python:
   install:
-  - requirements: docs/requirements.txt
+    - method: setuptools
+      path: .
+    - requirements: docs/requirements.txt
