--- a/.github/workflows/test-coverage-badge.yml
+++ b/.github/workflows/test-coverage-badge.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   test:
     name: Test coverage badge creation
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Extract test coverage
