--- a/environment.yml
+++ b/environment.yml
@@ -1,22 +1,23 @@
 name: "timeeval"
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - python>=3.7,<=3.9
   - pip>=20
-  - scikit-learn>=0.24.*
-  - matplotlib=3.5.*
-  - numpy=1.21.*
-  - pandas=1.3.*
-  - statsmodels=0.12.*
-  - jinja2=3.0.*
-  - tqdm=4.54.*
-  - conda-forge::asyncssh=2.5.*
+  - scikit-learn>=0.23
+  - matplotlib>=3.5.0
+  - numpy>=1.21.0
+  - pandas>=1.3.0
+  - statsmodels>=0.12.0
+  - jinja2>=3.0.0
+  - tqdm>=4.54.0
+  - asyncssh>=2.5.0
   - psutil
   - pip:
-      - dask[distributed]==2021.5.*
+      - dask[distributed]==2021.5.1
       - click==8.0.2  # newer versions are not compatible with dask[distributed] ATM; remove if fixed upstream (https://github.com/dask/distributed/issues/6013)
-      - docker==4.4.*
-      - durations==0.3.*
+      - docker>=4.4.0
+      - durations>=0.3.0
       - prts==1.0.0.3
-      - numpyencoder==0.3.*
+      - numpyencoder>=0.3.0
