fix(ci): only run typecheck on python 3.7

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -11,6 +11,24 @@ defaults:
     shell: bash -l {0}
 
 jobs:
+  typecheck:
+    name: Typecheck TimeEval on ubuntu with python 3.7
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Miniconda
+        uses: conda-incubator/setup-miniconda@v2.1.1
+        with:
+          use-mamba: true
+          auto-update-conda: true
+          environment-file: environment.yml
+          python-version: "3.7"
+      - name: Install CI dependencies
+        run: |
+          pip install -r requirements.ci
+      - name: Typcheck with mypy
+        run: |
+          python setup.py typecheck
   test:
     name: Build and test TimeEval on ${{ matrix.os }} with python ${{ matrix.python_version }}
     runs-on: ${{ matrix.os }}
