--- a/.github/workflows/generate-stubs.yml
+++ b/.github/workflows/generate-stubs.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: timeeval/timeeval-algorithms
-          path: '../timeeval-algorithms'
+          path: './timeeval-algorithms'
           # ref: 'main'
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v3.0.1
@@ -34,7 +34,7 @@ jobs:
           pip install -r requirements.txt
       - name: Generate code
         run: |
-          python -m timeeval_experiments.generator algo-stubs -f ../timeeval-algorithms
+          python -m timeeval_experiments.generator algo-stubs -f ./timeeval-algorithms
       - name: Commit and create pull request
         uses: peter-evans/create-pull-request@v5
         with:
