Add codecov token

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,6 +78,8 @@ jobs:
     - name: Upload Coverage to Codecov
       if: ${{ matrix.python_version == '3.9' && matrix.os == 'ubuntu-latest' }}
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         files: coverage.xml
         flags: unittests
