--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -55,6 +55,8 @@ jobs:
     - name: Upload Coverage to Codecov
       if: ${{ matrix.os == 'ubuntu-latest' }}
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         files: coverage.xml
         flags: unittests
