--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,6 +17,6 @@ formats: all
 
 python:
   install:
-    - method: setuptools
+    - method: pip
       path: .
     - requirements: docs/requirements.txt
